--- a/PhotographyWebsite/templates/base.html
+++ b/PhotographyWebsite/templates/base.html
@@ -1,10 +1,35 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>
+        {% block title %}
+            Title
+        {% endblock %}
+    </title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="{% static 'css/clear.css' %}">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+
+    {% block styles %}
+    {% endblock %}
+
+    {% block scripts %}
+    {% endblock %}
+
 </head>
 <body>
+{% include 'partials/navigation_bar.html' %}
 
+{% block site_content %}
+{% endblock %}
 </body>
 </html>
