--- a/PhotographyWebsite/templates/partials/navigation_bar.html
+++ b/PhotographyWebsite/templates/partials/navigation_bar.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<nav class="navbar">
+    <a href="#" id="logo" class="navbar-brand">Joana</a>
+    <ul class="pages">
+        <li><a href="#">Work</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
 
-</body>
-</html>
+    <ul class="authentication ml-auto">
+        <li><a href="#">Log In</a></li>
+        <li><a href="#">Register</a></li>
+    </ul>
+</nav>
