--- a/PhotographyWebsite/templates/creator/edit_photo.html
+++ b/PhotographyWebsite/templates/creator/edit_photo.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load static%}
 
-</body>
-</html>
+{% block title %}Edit Photo{% endblock %}
+
+{% block styles %}
+{% endblock %}
+
+{% block site_content %}
+    <form action="{% url 'edit-photo' photo.id %}" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form }}
+        <button>Edit</button>
+    </form>
+{% endblock %}
