--- a/PhotographyWebsite/static/css/main.css
+++ b/PhotographyWebsite/static/css/main.css
@@ -26,3 +26,23 @@ a {
 .pages {
     padding-left: 25px;
 }
+
+.popup-background {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0 ,0 ,0.7);
+    position: absolute;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.popup-window {
+    width: 500px;
+    height: 300px;
+    background-color: white;
+    border-radius: 4px;
+    text-align: center;
+    padding: 20px;
+}
