--- a/PhotographyWebsite/templates/partials/navigation_bar.html
+++ b/PhotographyWebsite/templates/partials/navigation_bar.html
@@ -12,7 +12,11 @@
     </ul>
 
     <ul>
-        <li><a href="{% url 'add-photo' %}"><i class="fas fa-plus" style="font-size: 35px"></i></a></li>
+        <li><a href="{% url 'add-photo' %}"><i class="fas fa-plus" style="font-size: 35px; cursor: pointer;"></i></a>
+        </li>
+        <li><a href="{% url 'add-category' %}"><i class="fas fa-folder-plus"
+                                                  style="font-size:35px; cursor: pointer;"></i></a></li>
+        <li><a href="#"></a><i class="fas fa-shopping-cart" style="font-size:35px; cursor: pointer;"></i></li>
     </ul>
 
 </nav>
