--- a/PhotographyWebsite/static/css/main.css
+++ b/PhotographyWebsite/static/css/main.css
@@ -1,6 +1,4 @@
-.navbar {
-    padding: 10px 50px;
-}
+.navbar { padding: 10px 50px; }
 
 ul {
     display: flex;
@@ -8,14 +6,20 @@ ul {
     position: center;
 }
 
-li {
-    padding-left: 15px;
-}
+li { padding-left: 15px;}
 
 a {
     color: black;
     font-size: 20px;
 }
+
+a:link, a:visited, a:hover, a:active {
+    text-decoration: none;
+    color: black;
+}
+
+nav a { cursor: pointer; }
+nav a:hover { opacity: 70%; }
 
 #logo {
     font-size: 45px;
@@ -23,14 +27,12 @@ a {
     font-family: Archivo Black, serif;
 }
 
-.pages {
-    padding-left: 25px;
-}
+.pages { padding-left: 25px; }
 
 .popup-background {
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0 ,0 ,0.7);
+    background-color: rgba(0, 0, 0, 0.7);
     position: absolute;
     top: 0;
     display: flex;
