--- a/PhotographyWebsite/static/css/work.css
+++ b/PhotographyWebsite/static/css/work.css
@@ -1,126 +1,55 @@
-/*.display-container {*/
-/*    display: flex;*/
-/*    flex-wrap: wrap;*/
-/*}*/
-
-/*.display-container .form-shape {*/
-/*    width: 50%;*/
-/*    position: relative;*/
-/*}*/
-
-/*.display-container .form-shape .image-container {*/
-/*    width: calc(100% - (20px * 2));*/
-
-/*    margin: 20px;*/
-/*}*/
-
-/*.display-container .form-shape .image {*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*}*/
-
-/*.display-container .form-shape .image img {*/
-/*    width: 100%;*/
-/*    margin: 0;*/
-/*}*/
-
-/*.image .text {*/
-/*    position: absolute;*/
-/*    top: 0;*/
-/*    right: 0;*/
-/*    bottom: 0;*/
-/*    left: 0;*/
-/*    overflow: auto;*/
-/*    display: flex;*/
-/*    align-content: center;*/
-/*    justify-content: center;*/
-/*    flex-direction: column;*/
-/*    padding: 7%;*/
-/*    text-align: center;*/
-/*    z-index: 100;*/
-/*    transition: opacity ease 200ms;*/
-/*}*/
-
-/*.text {*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*    background-color: #ff0000;*/
-/*    opacity: 30%;*/
-/*}*/
-/*.text h3 {*/
-/*    font-family: Archivo Black, serif;*/
-/*    opacity: 100%;*/
-/*}*/
-
-/*.text:hover {*/
-/*    opacity: 0;*/
-/*    cursor: pointer;*/
-/*}*/
-
-
 .display-container {
     display: flex;
     flex-wrap: wrap;
     padding: 30px 30px;
-    /*justify-content: space-between;*/
     justify-content: center;
-
 }
 
 .category {
     width: 50%;
     z-index: 100;
-    /*display: flex;*/
-    /*justify-content: center;*/
-    /*align-items: center;*/
 }
 
-.category img {
+.category img { width: 100%; }
+
+.image {
+    position: relative;
     width: calc(100% - (20px * 2));
     margin: 20px;
-    filter: grayscale(50%);
-    /*filter: brightness(110%);*/
-    /*filter: blur(1px);*/
-    transition: opacity ease 800ms;
+    cursor: pointer;
 }
 
-.category .text {
-    bottom: 454px;
-    position: relative;
-    margin: auto;
-
+.image .filter {
+    background-color: white;
+    opacity: 15%;
     text-align: center;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     transition: opacity ease 200ms;
-
+    z-index: 99;
 }
 
-.text h3 {
+.image h3 {
     font-family: Archivo Black, serif;
+    text-align: center;
+    font-size: 35px;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    transition: opacity ease 200ms;
 }
 
-.category img:hover {
-    filter: none;
-}
-
-.category img:hover ~ .text {
+.category-link .image:hover > h3 {
     opacity: 0;
 }
 
-.image {
-    padding-top: 25px;
-    z-index: 100;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.image img {
-    width: 1109px;
-}
-.image .navbar {
-    padding-bottom: 35px;
-}
-.category_name {
-    font-family: Archivo Black, serif;
-    text-align: center;
-    padding: 50px;
+.category-link .image:hover > .filter {
+    opacity: 0;
 }
