--- a/PhotographyWebsite/templates/pages/photos.html
+++ b/PhotographyWebsite/templates/pages/photos.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block styles %}
-    <link rel="stylesheet" href="{% static 'css/work.css' %}">
+    <link rel="stylesheet" href="{% static 'css/photos.css' %}">
 {% endblock %}
 
 {% block site_content %}
@@ -20,23 +20,32 @@
 
                     <ul class="navbar">
                         <li class="navbar-brand"><h3>{{ photo.name }}</h3></li>
-
-                        <li><a href="{% url 'edit-photo' photo.id %}">Edit</a></li>
-
-                        <li><a href="{% url 'delete-photo' photo.id %}">Delete</a></li>
-
                         <li><p class="price">{{ photo.price }}$</p></li>
 
-                        <li>
-                            <a href="{% url 'wish' photo.id %}">
-                                <i class="far fa-heart" style="font-size:30px; cursor: pointer;"></i>
-                            </a>
-                        </li>
+                        {% if user.groups.all.0.name == 'Creator' %}
+                            <li><a href="{% url 'edit-photo' photo.id %}">Edit</a></li>
 
-                        <li><p>Wishes: {{ photo.wishes_set.count }}</p></li>
+                            <li><a href="{% url 'delete-photo' photo.id %}">Delete</a></li>
 
-                        <li><a href="#"><i class="fas fa-cart-plus" style="font-size:30px; cursor: pointer;"></i></a>
-                        </li>
+                            <li><i class="fas fa-heart" style="font-size:30px; cursor: pointer;"></i> {{ photo.wishes_set.count }}</li>
+                        {% else %}
+                            <li>
+                                {% if photo.is_wished %}
+                                    <a href="{% url 'wish' photo.id %}">
+                                        <i class="fas fa-heart" style="font-size:30px; cursor: pointer;"></i>
+                                    </a>
+                                {% else %}
+                                    <a href="{% url 'wish' photo.id %}">
+                                        <i class="far fa-heart" style="font-size:30px; cursor: pointer;"></i>
+                                    </a>
+                                {% endif %}
+                            </li>
+
+
+                            <li><a href="#"><i class="fas fa-cart-plus"
+                                               style="font-size:30px; cursor: pointer;"></i></a>
+                            </li>
+                        {% endif %}
                     </ul>
                 </div>
             {% endfor %}
