Front end enhancement, Login/Register form + Edit/View Profile, Work page is now more stabel, Wishlist added to the Project

--- a/PhotographyWebsite/templates/auth/auth-base.html
+++ b/PhotographyWebsite/templates/auth/auth-base.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <title>
         {% block title %}
-            Title
+            Form-Template
         {% endblock %}
     </title>
 
@@ -16,39 +16,36 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins&display=swap" rel="stylesheet">
-
-
     <link rel="stylesheet" href="{% static 'css/base/clear.css' %}">
     <link rel="stylesheet" href="{% static 'css/base/main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/auth/auth-base.css' %}">
 
     {% block styles %}
     {% endblock %}
 
     <script type="text/javascript" src="{% static 'js/index.js' %}"></script>
 
-    {#    //Path to jQuery#}
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-            crossorigin="anonymous"></script>
-
-    {#    ////Path to Popper - it is for dropdowns etc in bootstrap#}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
-            integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
-            crossorigin="anonymous"></script>
-
-    {#    //Path to bootstrap#}
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
-            integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
-            crossorigin="anonymous"></script>
-
     {% block scripts %}
     {% endblock %}
 
 </head>
 <body>
-{% include 'partials/navigation_bar.html' %}
 
-{% block site_content %}
-{% endblock %}
+<div class="background">
+
+    <div class="container">
+
+        <input type="image" alt="logo" id="picture" src="{% static 'images/website-logo.png' %}" disabled>
+
+        <div class="spacer">
+
+            <div class="form">
+
+                {% block form %}
+                {% endblock %}
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
