--- a/PhotographyWebsite/static/css/base/main.css
+++ b/PhotographyWebsite/static/css/base/main.css
@@ -1,4 +1,6 @@
-.navbar { padding: 10px 50px; }
+.navbar {
+    padding: 30px 50px 0 50px;
+}
 
 ul {
     display: flex;
@@ -6,7 +8,9 @@ ul {
     position: center;
 }
 
-li { padding-left: 15px;}
+li {
+    padding-left: 15px;
+}
 
 a {
     color: black;
@@ -18,16 +22,26 @@ a:link, a:visited, a:hover, a:active {
     color: black;
 }
 
-nav a { cursor: pointer; }
-nav a:hover { opacity: 70%; }
-
-#logo {
-    font-size: 45px;
-    margin: 0;
-    font-family: Archivo Black, serif;
+nav a {
+    cursor: pointer;
 }
 
-.pages { padding-left: 25px; }
+nav a:hover {
+    opacity: 70%;
+}
+
+#logo {
+    padding: 0;
+    margin: 0;
+    opacity: 100%;
+    cursor: pointer;
+    outline: none;
+}
+
+.pages {
+    padding-left: 25px;
+    padding-bottom: 12px
+}
 
 .popup-background {
     width: 100%;
