--- a/PhotographyWebsite/templates/auth/login.html
+++ b/PhotographyWebsite/templates/auth/login.html
@@ -1,23 +1,33 @@
-{% extends 'base.html' %}
+{% extends 'auth/auth-base.html' %}
 {% load bootstrap4 %}
+{% load static %}
 
-{% block site_content %}
-    <h1 class="text-center">Login</h1>
+{% block title %}
+    Login
+{% endblock %}
 
-    <div class="row d-flex justify-content-center">
-        <form action="{% url 'login user' %}" method=POST enctype="multipart/form-data">
-            <input type="hidden" name="return_url" value="{{ request.GET.next }}">
+{% block styles %}
+    <link rel="stylesheet" href="{% static 'css/auth/login.css' %}">
+{% endblock %}
 
-            {% csrf_token %}
+{% block form %}
 
-            {% for field in login_form %}
-                {% bootstrap_field field %}
-            {% endfor %}
+    <h1>Login</h1>
+    <form action="{% url 'login user' %}" method=POST enctype="multipart/form-data">
+        <input type="hidden" name="return_url" value="{{ request.GET.next }}">
 
-            {% buttons %}
-                <button class="btn btn-primary">Login</button>
-                <p>or <a href="{% url 'register user' %}?next={{ request.GET.next }}">register</a></p>
-            {% endbuttons %}
-        </form>
-    </div>
+        {% csrf_token %}
+
+        {% for field in login_form %}
+            {% bootstrap_field field %}
+        {% endfor %}
+
+        <div class="buttons">
+            <button class="btn primary">Login</button>
+            <p style="padding-top: 15px;">or</p>
+            <a href="{% url 'register user' %}?next={{ request.GET.next }}" class="secondary"
+               style="text-decoration: underline;">Create an account</a>
+        </div>
+    </form>
+
 {% endblock %}
