Front end work all Done, bugs fixed, design enhanced

--- a/PhotographyWebsite/static/css/base/main.css
+++ b/PhotographyWebsite/static/css/base/main.css
@@ -38,27 +38,6 @@ nav a:hover {
     outline: none;
 }
 
-.pages {
-    padding-left: 25px;
-    padding-bottom: 12px
-}
+.pages { padding-left: 25px; }
 
-.popup-background {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    position: absolute;
-    top: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.popup-window {
-    width: 500px;
-    height: 300px;
-    background-color: white;
-    border-radius: 4px;
-    text-align: center;
-    padding: 20px;
-}
+.pages, .authentication { padding-bottom: 10px }
