--- a/PhotographyWebsite/templates/base.html
+++ b/PhotographyWebsite/templates/base.html
@@ -9,6 +9,7 @@
             Title
         {% endblock %}
     </title>
+    <link rel="icon" type="image/png" href="{% static 'images/camera.png' %}">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -31,6 +32,10 @@
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             crossorigin="anonymous"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+            integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+            crossorigin="anonymous"></script>
+
     {#    ////Path to Popper - it is for dropdowns etc in bootstrap#}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
             integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
@@ -49,6 +54,9 @@
 {% include 'partials/navigation_bar.html' %}
 
 {% block site_content %}
+{% endblock %}
+
+{% block jquery %}
 {% endblock %}
 </body>
 </html>
