--- a/PhotographyWebsite/static/css/work.css
+++ b/PhotographyWebsite/static/css/work.css
@@ -8,6 +8,11 @@
 .category {
     width: 50%;
     z-index: 100;
+    cursor: default !important;
+}
+
+.category-link {
+    cursor: default !important;
 }
 
 .category img {
@@ -54,4 +59,13 @@
 
 .category-link .image:hover > .filter {
     opacity: 0;
+}
+
+.editor-buttons {
+    text-align: center;
+}
+
+.editor-buttons a {
+    margin-left: 50px;
+    margin-right: 50px;
 }
