--- a/PhotographyWebsite/templates/creator/add_category.html
+++ b/PhotographyWebsite/templates/creator/add_category.html
@@ -1,25 +1,29 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load bootstrap4 %}
 
 {% block title %}
     Add Category
 {% endblock %}
 
+{% block styles %}
+    <link rel="stylesheet" href="{% static 'css/auth/edit_profile.css' %}">
+{% endblock %}
+
 {% block site_content %}
-<div class="popup-background">
-    <div class="popup-window">
-        <div class="close" style="cursor: pointer;">
-            <i class="far fa-times-circle" style="font-size: 40px;"></i>
-        </div>
+    <div class="container">
+        <i class="fas fa-folder-plus" style="font-size: 200px;"></i>
 
         <form action="{% url 'add-category' %}" method="post" enctype="multipart/form-data">
             {% csrf_token %}
-            <label for="image">{{ form.image.label }}</label>
-            {{ form.image }}
-            <label for="category">{{ form.category.label }}</label>
-            {{ form.category }}
-            <button>Add</button>
+
+            {% for field in form %}
+                {% bootstrap_field field %}
+            {% endfor %}
+
+            <div class="button">
+                <button class="btn primary">Add Category</button>
+            </div>
         </form>
     </div>
-</div>
 {% endblock %}
