--- a/PhotographyWebsite/templates/user/wishlist.html
+++ b/PhotographyWebsite/templates/user/wishlist.html
@@ -2,40 +2,40 @@
 {% load static %}
 
 {% block title %}
-    Work
+    Wishlist
 {% endblock %}
 
 {% block styles %}
-    <link rel="stylesheet" href="{% static 'css/photos.css' %}">
+    <link rel="stylesheet" href="{% static 'css/wishlist.css' %}">
 {% endblock %}
 
 {% block site_content %}
+    <div class="d-flex flex-wrap justify-content-center">
 
-    <div class="display-container">
         {% if wishlist %}
             {% for photo in wishlist %}
-                <div class="image">
-                    <img src="{% url 'public file' photo.photo.watermarked_photo.url %}" alt="{{ photo.photo.name }}">
+                <div class="card m-3" style="width: 300px;">
 
-                    <ul class="navbar">
-                        <li class="navbar-brand"><h3>{{ photo.photo.name }}</h3></li>
+                    <img class="card-img-top" src="{% url 'public file' photo.photo.watermarked_photo.url %}"
+                         alt="{{ photo.photo.name }}">
 
-                        <li><p class="price">{{ photo.photo.price }}$</p></li>
-                        <li>
+                    <div class="card-body" style="text-align:center">
+                        <h3>{{ photo.photo.name }} &ensp; {{ photo.photo.price }}$</h3>
+                        <div class="second-row navbar">
                             <a href="{% url 'wish' photo.photo.id %}">
                                 <i class="fas fa-heart" style="font-size:30px; cursor: pointer;"></i>
                             </a>
-                        </li>
 
-                        <li><a href="#"><i class="fas fa-cart-plus" style="font-size:30px; cursor: pointer;"></i></a>
-                        </li>
-                    </ul>
+                            <a href="#"><i class="fas fa-cart-plus"
+                                           style="font-size:30px; cursor: pointer;"></i></a>
+                        </div>
+                    </div>
                 </div>
+
             {% endfor %}
+            </div>
 
         {% else %}
             <h1>Your Wishlist is empty!</h1>
         {% endif %}
-
-    </div>
 {% endblock %}
