--- a/PhotographyWebsite/templates/base.html
+++ b/PhotographyWebsite/templates/base.html
@@ -9,7 +9,7 @@
             Title
         {% endblock %}
     </title>
-    <link rel="icon" type="image/png" href="{% static 'images/camera.png' %}">
+    <link rel="icon" type="image/png" href="{% static 'images/favicon/camera.png' %}">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
