--- a/PhotographyWebsite/templates/partials/navigation_bar.html
+++ b/PhotographyWebsite/templates/partials/navigation_bar.html
@@ -27,7 +27,8 @@
                                                                alt="wishlist"
                                                                style="width:45px; height:35px; cursor: pointer; outline: none;"/></a>
                 </li>
-                <li><a href="#"></a><i class="fas fa-shopping-cart" style="font-size:35px; cursor: pointer;"></i>
+                <li><a href="{% url 'cart page' %}"><i class="fas fa-shopping-cart"
+                                                       style="font-size:35px; cursor: pointer;"></i></a>
                 </li>
             {% endif %}
 
