--- a/PhotographyWebsite/templates/user/shopping_cart.html
+++ b/PhotographyWebsite/templates/user/shopping_cart.html
@@ -1,10 +1,131 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load static %}
 
-</body>
-</html>
+{% block title %}
+    Wishlist
+{% endblock %}
+
+{% block styles %}
+    <link rel="stylesheet" href="{% static 'css/shopping_cart.css' %}">
+{% endblock %}
+
+{% block site_content %}
+    <section style="margin: 25px;">
+        <div class="row">
+
+            <div class="col-lg-8">
+                {% if cart %}
+                    <h5 class="mb-4">Cart (<span>{{ cart.count }}</span> items)</h5>
+
+                    {% for photo in cart %}
+                        <!-- Card -->
+                        <div class="mb-3">
+                            <div class="pt-4 wish-list">
+
+
+                                <div class="row mb-4">
+                                    <div class="col-md-5 col-lg-3 col-xl-3">
+                                        <div class="view zoom overlay z-depth-1 rounded mb-3 mb-md-0">
+                                            <img class="img-fluid w-100"
+                                                 src="{% url 'public file' photo.photo.watermarked_photo.url %}"
+                                                 alt="{{ photo.photo.name }}">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-7 col-lg-9 col-xl-9">
+                                        <div>
+                                            <div class="d-flex justify-content-between">
+                                                <div>
+                                                    <h5>{{ photo.photo.name }}</h5>
+                                                    <p class="mb-3 text-muted text-uppercase small">
+                                                        Category - {{ photo.photo.category.category }}</p>
+                                                </div>
+                                            </div>
+                                            <div class="d-flex justify-content-between align-items-center">
+                                                <div>
+                                                    <a href="{% url 'add to cart' photo.photo.id %}"
+                                                       class="card-link-secondary small text-uppercase mr-3">
+                                                        <i class="fas fa-trash mr1" style="color: red;">
+                                                        </i>&nbsp; Remove item</a>
+                                                </div>
+                                                <p class="mb-0"><span><strong>${{ photo.photo.price }}</strong></span>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <hr class="mb-4">
+
+                            </div>
+                        </div>
+                    {% endfor %}
+                {% else %}
+                    <h1>Your Shopping Cart is empty!</h1>
+                {% endif %}
+            </div>
+
+            <div class="col-lg-4">
+
+                <!-- Card -->
+                <div class="mb-3">
+                    <div class="pt-4">
+                        {% if cart %}
+
+                            <h5 class="mb-3">The total amount of</h5>
+
+                            <ul class="list-group list-group-flush">
+                                {% for photo in cart %}
+                                    <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+                                        {{ photo.photo.name }}
+                                        <span>${{ photo.photo.price }}</span>
+                                    </li>
+                                    <hr class="mb-4">
+
+                                    {#                                    <li class="list-group-item d-flex justify-content-between align-items-center px-0">#}
+                                    {#                                        Shipping#}
+                                    {#                                        <span>Gratis</span>#}
+                                    {#                                    </li>#}
+                                {% endfor %}
+                                <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
+                                    <div>
+                                        <strong>The total amount is</strong>
+                                    </div>
+                                    <span><strong>${{ cart.sum }}</strong></span>
+                                </li>
+                            </ul>
+
+                            <button type="button" class="btn btn-primary btn-block">go to checkout</button>
+
+                            <div class="mb-3">
+                                <div class="pt-4">
+
+                                    <a class="dark-grey-text d-flex justify-content-between" data-toggle="collapse"
+                                       href="#collapseExample"
+                                       aria-expanded="false" aria-controls="collapseExample">
+                                        Add a discount code (optional)
+                                        <span><i class="fas fa-chevron-down pt-1"></i></span>
+                                    </a>
+
+                                    <div class="collapse" id="collapseExample">
+                                        <div class="mt-3">
+                                            <div class="md-form md-outline mb-0">
+                                                <input type="text" id="discount-code"
+                                                       class="form-control font-weight-light"
+                                                       placeholder="Enter discount code">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        {% else %}
+                            <h5 class="mb-3">Cart is empty</h5>
+                            <button type="button" class="btn btn-secondary btn-block" disabled>go to checkout</button>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+{% endblock %}
+
