Download bought photos feature added to the user account

--- a/PhotographyWebsite/templates/user/shopping_cart.html
+++ b/PhotographyWebsite/templates/user/shopping_cart.html
@@ -92,9 +92,9 @@
                                     <span><strong>${{ cart.sum }}</strong></span>
                                 </li>
                             </ul>
+                                <a href="{% url 'download items' %}" class="btn primary btn-block" style="width:100%;">go to checkout</a>
 
-                            <button type="button" class="btn btn-primary btn-block">go to checkout</button>
-
+{#                                <button class="btn primary">Edit Profile</button>#}
                             <div class="mb-3">
                                 <div class="pt-4">
 
