--- a/PhotographyWebsite/static/css/base/main.css
+++ b/PhotographyWebsite/static/css/base/main.css
@@ -38,6 +38,23 @@ nav a:hover {
     outline: none;
 }
 
-.pages { padding-left: 25px; }
+.pages {
+    padding-left: 25px;
+}
 
-.pages, .authentication { padding-bottom: 10px }
+.pages, .authentication {
+    padding-bottom: 10px
+}
+
+.primary {
+    display: inline-block;
+    background: #6dabe4;
+    color: #fff;
+    border-bottom: none;
+    width: auto;
+    padding: 15px 39px;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    cursor: pointer;
+}
