--- a/PhotographyWebsite/templates/partials/navigation_bar.html
+++ b/PhotographyWebsite/templates/partials/navigation_bar.html
@@ -7,8 +7,8 @@
                                                                                                 alt='Logo'></a>
     <ul class="pages">
         <li><a href="{% url 'work page' %}">Work</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="{% url 'about us' %}">About</a></li>
+        <li><a href="{% url 'contact us' %}">Contact</a></li>
     </ul>
 
     <ul class="authentication ml-auto">
