--- a/PhotographyWebsite/templates/pages/contact.html
+++ b/PhotographyWebsite/templates/pages/contact.html
@@ -1,10 +1,53 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load static %}
 
-</body>
-</html>
+{% block title %}
+    Contact Us
+{% endblock %}
+
+{% block styles %}
+    <link rel="stylesheet" href="{% static 'css/contact.css' %}">
+{% endblock %}
+
+{% block site_content %}
+
+    <div class="bg-light">
+        <div class="container">
+            <div class="row justify justify-content-center">
+                <div class="col-11 col-md-8 col-lg-6 col-xl-5">
+                    <form class="">
+                        <div class="card bg-dark">
+                            <div class="row mt-0">
+                                <div class="col-md-12 ">
+                                    <h4 class="">Contact Us</h4>
+                                    <p>Use the form below to share your questions, ideas, comments and feedback</p>
+                                </div>
+                            </div>
+                            <div class="form-group row mb-3">
+                                <div class="col-md-12 mb-0">
+                                    <p class="mb-1">Email</p> <input id="e-mail" type="text"
+                                                                     placeholder="Enter your email" name="email"
+                                                                     class="form-control input-box rm-border">
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-md-12 mb-2">
+                                    <p class="mb-1">Message</p> <textarea id="message" type="text"
+                                                                          placeholder="Enter your message"
+                                                                          name="message"
+                                                                          class="form-control input-box rm-border"></textarea>
+                                </div>
+                            </div>
+                            <div class="form-group row justify-content-center mb-0">
+                                <div class="col-md-12 px-3"><input type="submit" value="Submit"
+                                                                   class="btn btn-block btn-purple rm-border"></div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
+
